@@ -92,6 +92,10 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>r8.App</mainClass>
+                            <options>
+                                <option>--add-exports</option>
+                                <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
